--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'org.jsoup:jsoup:1.10.1'
     implementation 'org.jetbrains:annotations-java5:15.0'
+
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
 }
