--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,10 @@ android {
         }
     }
 
+    packagingOptions {
+        exclude 'META-INF/proguard/androidx-annotations.pro'
+    }
+
     dataBinding.enabled = true
 }
 
@@ -31,7 +35,7 @@ dependencies {
     implementation 'org.jsoup:jsoup:1.10.1'
     implementation 'org.jetbrains:annotations-java5:15.0'
 
-    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation 'com.android.support:preference-v7:28.0.0'
     implementation 'com.google.code.gson:gson:2.8.5'
 }
