Architecture Components Migration 1

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,19 @@ dependencies {
     implementation 'androidx.preference:preference:1.0.0'
     implementation 'com.google.code.gson:gson:2.8.5'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+
+    def room_version = '2.1.0'
+    def lifecycle_version = '2.0.0'
+
+    // Room components
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+    // Test helpers
+    testImplementation "androidx.room:room-testing:$room_version"
+
+    // Lifecycle components
+    // ViewModel and LiveData
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    annotationProcessor "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
+    implementation 'com.google.android.material:material:1.0.0'
 }
